--- a/.github/workflows/sbt.yml
+++ b/.github/workflows/sbt.yml
@@ -260,3 +260,22 @@ jobs:
             **/target/test/
             **/target/test-reports/**
             **/target/unit-tests.log
+
+  openapi-codegen-check:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        java:
+          - 11
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup JDK ${{ matrix.java }}
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: ${{ matrix.java }}
+          check-latest: false
+      - name: Test with SBT
+        run: |
+          build/sbt "clean;celeborn-openapi-client/check"
