--- a/master/pom.xml
+++ b/master/pom.xml
@@ -198,5 +198,25 @@
         </dependency>
       </dependencies>
     </profile>
+    <profile>
+      <id>aws-mpu</id>
+      <activation>
+        <property>
+          <name>aws-mpu-deps</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-aws</artifactId>
+          <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>com.amazonaws</groupId>
+          <artifactId>aws-java-sdk-bundle</artifactId>
+          <version>${aws.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
   </profiles>
 </project>
