--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -144,12 +144,7 @@
 
   <profiles>
     <profile>
-      <id>aws-mpu</id>
-      <activation>
-        <property>
-          <name>aws-mpu-deps</name>
-        </property>
-      </activation>
+      <id>aws</id>
       <dependencies>
         <dependency>
           <groupId>org.apache.celeborn</groupId>
