--- a/master/pom.xml
+++ b/master/pom.xml
@@ -185,10 +185,16 @@
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-aws</artifactId>
           <version>${hadoop.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>com.amazonaws</groupId>
+              <artifactId>aws-java-sdk-bundle</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
         <dependency>
           <groupId>com.amazonaws</groupId>
-          <artifactId>aws-java-sdk-bundle</artifactId>
+          <artifactId>aws-java-sdk-s3</artifactId>
           <version>${aws.version}</version>
         </dependency>
       </dependencies>
