[CELEBORN-1750] Return struct worker resource consumption information with RESTful api

--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -844,9 +844,9 @@ components:
             type: string
         resourceConsumption:
           type: object
-          description: A map of identifier and resource consumption.
+          description: A map of user identifier and resource consumption.
           additionalProperties:
-            type: string
+            $ref: '#/components/schemas/WorkerResourceConsumption'
         workerRef:
           type: string
           description: The reference of the worker.
@@ -863,6 +863,26 @@ components:
         - pushPort
         - fetchPort
         - replicatePort
+
+    WorkerResourceConsumption:
+      type: object
+      properties:
+        diskBytesWritten:
+          type: integer
+          format: int64
+        diskFileCount:
+          type: integer
+          format: int64
+        hdfsBytesWritten:
+          type: integer
+          format: int64
+        hdfsFileCount:
+          type: integer
+          format: int64
+        subResourceConsumption:
+          type: object
+          additionalProperties:
+            $ref: '#/components/schemas/WorkerResourceConsumption'
 
     WorkerTimestampData:
       type: object
