--- a/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
@@ -429,7 +429,7 @@ components:
             type: string
         resourceConsumption:
           type: object
-          description: A map of identifier and resource consumption.
+          description: A map of user identifier and resource consumption.
           additionalProperties:
             $ref: '#/components/schemas/WorkerResourceConsumption'
         workerRef:
