--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -842,7 +842,7 @@ components:
           description: A map of disk name and disk info.
           additionalProperties:
             type: string
-        resourceConsumption:
+        resourceConsumptions:
           type: object
           description: A map of user identifier and resource consumption.
           additionalProperties:
