--- a/cpp/celeborn/utils/tests/CMakeLists.txt
+++ b/cpp/celeborn/utils/tests/CMakeLists.txt
@@ -12,11 +12,14 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-add_library(
-        utils
-        ProcessBase.cpp StackTrace.cpp CelebornException.cpp Exceptions.cpp flags.cpp)
+
+add_executable(celeborn_utils_test ExceptionTest.cpp)
+
+add_test(NAME celeborn_utils_test COMMAND celeborn_utils_test)
 
 target_link_libraries(
+        celeborn_utils_test
+        PRIVATE
         utils
         ${WANGLE}
         ${FIZZ}
@@ -24,8 +27,6 @@ target_link_libraries(
         ${FOLLY_WITH_DEPENDENCIES}
         ${GLOG}
         ${GFLAGS_LIBRARIES}
-)
-
-if(CELEBORN_BUILD_TESTS)
-    add_subdirectory(tests)
-endif()
+        GTest::gtest
+        GTest::gmock
+        GTest::gtest_main)
