[CELEBORN-1761][CIP-14] Add cppProto to cppClient

--- a/cpp/celeborn/proto/CMakeLists.txt
+++ b/cpp/celeborn/proto/CMakeLists.txt
@@ -12,5 +12,6 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-add_subdirectory(utils)
-add_subdirectory(proto)
+add_library(proto STATIC ${ProtoGenSource} ${ProtoGenHeader})
+add_dependencies(proto generate_proto_source)
+target_link_libraries(proto ${Boost_LIBRARIES} ${PROTOBUF_LIBRARY})
