--- a/cpp/celeborn/memory/tests/CMakeLists.txt
+++ b/cpp/celeborn/memory/tests/CMakeLists.txt
@@ -12,6 +12,18 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-add_subdirectory(utils)
-add_subdirectory(proto)
-add_subdirectory(memory)
+
+add_executable(celeborn_memory_test ByteBufferTest.cpp)
+
+add_test(NAME celeborn_memory_test COMMAND celeborn_memory_test)
+
+target_link_libraries(
+        celeborn_memory_test
+        PRIVATE
+        memory
+        ${FOLLY_WITH_DEPENDENCIES}
+        ${GLOG}
+        ${GFLAGS_LIBRARIES}
+        GTest::gtest
+        GTest::gmock
+        GTest::gtest_main)
