--- a/charts/celeborn/values.yaml
+++ b/charts/celeborn/values.yaml
@@ -247,3 +247,9 @@ podMonitor:
     interval: 5s
     # Specifies port name
     portName: metrics
+
+serviceAccount:
+  # -- Specifies whether to create a service account for Celeborn
+  create: false
+  # -- Specifies the name of the service account
+  name: default
