Add role and roleBinding helm charts

--- a/charts/celeborn/ci/values.yaml
+++ b/charts/celeborn/ci/values.yaml
@@ -140,3 +140,12 @@ serviceAccount:
   create: false
   # -- Specifies the name of the service account
   name: default
+
+rbac:
+  create: false
+  roleName: default
+  roleBindingName: default
+  rules:
+    - apiGroups: [""]
+      resources: ["pods"]
+      verbs: ["create", "list", "delete"]
