--- a/charts/celeborn/values.yaml
+++ b/charts/celeborn/values.yaml
@@ -128,7 +128,7 @@ environments:
   CELEBORN_WORKER_MEMORY: 2g
   CELEBORN_WORKER_OFFHEAP_MEMORY: 12g
   CELEBORN_WORKER_JAVA_OPTS: "-XX:-PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:gc-worker.out -Dio.netty.leakDetectionLevel=advanced"
-  CELEBORN_NO_DAEMONIZE: 1
+  CELEBORN_NO_DAEMONIZE: true
   TZ: "Asia/Shanghai"
 
 # -- Specifies the DNS policy for Celeborn pods to use
