--- a/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
@@ -202,6 +202,44 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationsResponse'
 
+  /api/v1/logger:
+    get:
+      tags:
+        - Logger
+      operationId: getLogger
+      description: Get the logger level for the class.
+      parameters:
+        - name: name
+          in: query
+          description: The logger name.
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoggerInfo'
+    post:
+      tags:
+        - Logger
+      operationId: setLogger
+      description: Set the logger level for the class.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoggerInfo'
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HandleResponse'
+
 components:
   schemas:
     ConfigData:
@@ -650,6 +688,19 @@ components:
             - GRACEFUL
             - IMMEDIATELY
             - NONE
+
+    LoggerInfo:
+      type: object
+      properties:
+        name:
+          type: string
+          description: The logger name.
+        level:
+          type: string
+          description: The logger level.
+      required:
+        - name
+        - level
 
     HandleResponse:
       type: object
