--- a/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
@@ -172,7 +172,7 @@ paths:
       operationId: workerExit
       description: |
         Trigger this worker to exit.
-        Legal exit types are 'Decommission', 'Graceful' and 'Immediately'.
+        Legal exit types are 'DECOMMISSION', 'GRACEFUL' and 'IMMEDIATELY'.
       requestBody:
         content:
           application/json:
