--- a/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
@@ -202,7 +202,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApplicationsResponse'
 
-  /api/v1/logger:
+  /api/v1/loggers:
     get:
       tags:
         - Logger
@@ -221,7 +221,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LoggerInfo'
+                $ref: '#/components/schemas/LoggerInfos'
     post:
       tags:
         - Logger
@@ -701,6 +701,15 @@ components:
       required:
         - name
         - level
+
+    LoggerInfos:
+      type: object
+      properties:
+        loggers:
+          type: array
+          description: The logger infos.
+          items:
+            $ref: '#/components/schemas/LoggerInfo'
 
     HandleResponse:
       type: object
