get logger conf instead (#45)

--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -461,12 +461,12 @@ paths:
       tags:
         - Logger
       operationId: getLogger
-      description: Get the logger level.
+      description: Get the logger level, return all loggers if no name specified.
       parameters:
         - name: name
           in: query
           description: The logger name.
-          required: true
+          required: false
           schema:
             type: string
       responses:
